--- a/build.gradle
+++ b/build.gradle
@@ -24,17 +24,21 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.0.0'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
+	compileOnly group: 'org.projectlombok', name: 'lombok'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+	runtimeOnly 'com.h2database:h2'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+	
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
+	
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
