feat : add page contact, add function send email
이메일로 문의 내용을 넣어주는 거 만들었다.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.jpa.hibernate.ddl-auto=update
 #show jpa SQL query in console
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khw33352182@gmail.com
+spring.mail.password=qbrw gxln mswi gzsm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
