--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,8 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-test'
 	
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+         	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 }
-
 tasks.named('test') {
 	useJUnitPlatform()
 }
