--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,8 @@ spring.mail.username=khw33352182@gmail.com
 spring.mail.password=qbrw gxln mswi gzsm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+cloud.aws.credentials.access-key=${CLOUD_AWS_ACCESS_KEY}
+cloud.aws.credentials.secret-key=${CLOUD_AWS_SECRET_KEY}
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.s3.bucket=${CLOUD_AWS_S3_BUCKET}
