--- a/build.gradle
+++ b/build.gradle
@@ -24,29 +24,36 @@ repositories {
 }
 
 dependencies {
+	// Spring Boot Starters
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools'
-	compileOnly group: 'org.projectlombok', name: 'lombok'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
-	runtimeOnly 'com.h2database:h2'
-	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
-	
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
-	
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-	
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 
+	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
-	
-  implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 
+	// Thymeleaf Extras
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+	// Database
+	runtimeOnly 'com.h2database:h2'
+
+	// AWS
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// Lombok
+	compileOnly group: 'org.projectlombok', name: 'lombok'
+
+	// Testing
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
 }
 
 tasks.named('test') {
