feat : add unity build result
유니티 웹빌드 한거 스프링 프로젝트에 올렸음

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.mail.username=khw33352182@gmail.com
 spring.mail.password=qbrw gxln mswi gzsm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+server.compression.mime-types=application/javascript,application/wasm,application/octet-stream
