feat : add dependencies
build 단계에서 롬복이 제대로 안 돼서 오류나는데 그거 해결해주는 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 
 	// 기존 AWS 의존성
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.590'
 
 	// 최신 AWS SDK를 사용하고 싶다면 추가 (선택)
 	implementation platform('software.amazon.awssdk:bom:2.20.143')
@@ -52,6 +53,7 @@ dependencies {
 
 	// Spring Boot 3.x를 사용한다면?
 	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.590'
 
 	// Lombok
 	compileOnly group: 'org.projectlombok', name: 'lombok'
@@ -61,6 +63,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
+
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.named('test') {
