fix : AWS S3 bucket setting error
AWS SDK v1 방식을 사용하고 있던 코드를 v2 방식으로 변경
의존성도 v2만 지원하는 걸로 변경

--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,11 @@ dependencies {
 	// Database
 	runtimeOnly 'com.h2database:h2'
 
-	// AWS
-	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'
+	// AWS SDK v2 의존성만 추가
 	implementation 'software.amazon.awssdk:s3:2.20.0'
+
+	// Spring Cloud AWS 의존성
+	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.2'
 
 	// Lombok
 	compileOnly group: 'org.projectlombok', name: 'lombok'
