fix : AWS S3 bucket setting error
application.properties 에서 aws.  -> cloud.aws. 로 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,11 @@ spring.mail.password=qbrw gxln mswi gzsm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-cloud.aws.credentials.access-key=${CLOUD_AWS_ACCESS_KEY}
-cloud.aws.credentials.secret-key=${CLOUD_AWS_SECRET_KEY}
-cloud.aws.region.static=ap-northeast-2
-cloud.aws.s3.bucket=${CLOUD_AWS_S3_BUCKET}
+aws.s3.bucket=
+# aws.accessKeyId=
+# aws.secretAccessKey=
+# aws.region=
+
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+cloud.aws.region.static=
