feat : add function obj, mtl, bd file into input tag

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.compression.mime-types=application/javascript,application/wasm,application/octet-stream
+#spring.web.resources.static-locations=classpath:/static/
