feat : add file upload limits
S3 파일 업로드 크기 제한 10MB로 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,7 @@ aws.s3.bucket=
 cloud.aws.credentials.access-key=
 cloud.aws.credentials.secret-key=
 cloud.aws.region.static=
+
+# File upload limits
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
