--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,11 +26,12 @@ spring.mail.password=qbrw gxln mswi gzsm
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-aws.s3.bucket=
-# aws.accessKeyId=
-# aws.secretAccessKey=
-# aws.region=
+# 외부 설정 파일
+spring.profiles.include=aws
 
-cloud.aws.credentials.access-key=
-cloud.aws.credentials.secret-key=
-cloud.aws.region.static=
+# File upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+spring.main.web-application-type=servlet
