--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,10 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # File upload limits
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
 
 # 외부 설정 파일
 spring.profiles.include=aws
+
+spring.thymeleaf.cache=false
