--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ spring.servlet.multipart.enabled=true
 # File upload limits
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
+
+# application.properties 또는 application.yml
+server.port=8080
+server.forward-headers-strategy=framework
