--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,4 @@ spring.servlet.multipart.max-request-size=100MB
 # application.properties 또는 application.yml
 server.port=8080
 server.forward-headers-strategy=framework
+spring.main.allow-bean-definition-overriding=true
